--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+/* -------import fonts ------ */
+@font-face {
+  font-family: newfont;
+  src: url("fonts/Raleway-VariableFont_wght.ttf");
+}
+
 * {
   margin: 0;
   padding: 0;
+  font: newfont, arial;
 }
 
 .container {
@@ -12,6 +19,10 @@ header {
   width: 95%;
   margin: auto;
   height: 80px;
+}
+
+h1 {
+  font-size: 1.5em;
 }
 
 .logo {
@@ -52,14 +63,54 @@ a {
 
 .search {
   border: 1px black solid;
-  height: 25px;
+  height: 30px;
+  width: 300px;
+  display: flex;
+  flex-direction: row;
+}
+
+.search_icon {
+  width: 20%;
+}
+
+i {
+  margin: 5px auto auto 20px;
+}
+
+input {
+  width: 45%;
+}
+
+.search_btn {
+  color: white;
+  background-color: blue;
+  width: 35%;
+}
+
+.filter {
+  text-align: left;
+  display: inline-flex;
+}
+
+.filter_elements {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.filter_element {
+  border: 1px black solid;
   border-radius: 90px;
-  width: 450px;
+  width: auto;
+  height: 30px;
+}
+
+.label {
 }
 
 .hosts {
   margin: 15px auto;
-  width: 90%;
+  width: 95%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -67,16 +118,18 @@ a {
 }
 
 .hosts_results {
-  flex: 2;
   display: flex;
   flex-direction: column;
   height: 550px;
   margin-top: 20px;
+  background-color: #f2f2f2;
+  width: 65%;
 }
 
 .hosts_results_title {
   margin-left: 50px;
 }
+
 .hosts_results_elements {
   display: flex;
   flex-wrap: wrap;
@@ -99,11 +152,12 @@ a {
 }
 
 .hosts_popular {
-  flex: 1;
   height: 550px;
   margin-top: 20px;
   display: flex;
   flex-direction: column;
+  width: 30%;
+  background-color: #f2f2f2;
 }
 
 .hosts_popular_title {
