--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /* -------import fonts ------ */
 @font-face {
-  font-family: newfont;
+  font-family: Raleway;
   src: url("fonts/Raleway-VariableFont_wght.ttf");
 }
-
 * {
   margin: 0;
   padding: 0;
-  font: newfont, arial;
+  font-family: Raleway, arial;
+  box-sizing: border-box;
 }
 
 .container {
@@ -16,7 +16,7 @@
 }
 
 header {
-  width: 95%;
+  width: 80%;
   margin: auto;
   height: 80px;
 }
@@ -52,7 +52,7 @@ a {
 }
 
 .actions {
-  width: 95%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -83,13 +83,16 @@ input {
 
 .search_btn {
   color: white;
-  background-color: blue;
+  background-color: rgb(102, 102, 236);
   width: 35%;
 }
 
 .filter {
   text-align: left;
-  display: inline-flex;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: fit-content;
 }
 
 .filter_elements {
@@ -101,109 +104,162 @@ input {
 .filter_element {
   border: 1px black solid;
   border-radius: 90px;
-  width: auto;
   height: 30px;
+  width: auto;
+  margin: 10px;
+  text-align: center;
 }
 
 .label {
+  border-radius: 90px;
+  width: 30px;
+  height: 30px;
+  background-color: blue;
+  border: 1px black solid;
 }
 
+/*hosts*/
 .hosts {
-  margin: 15px auto;
-  width: 95%;
+  margin: 30px auto;
+  width: 80%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 600px;
+  height: 580px;
 }
 
 .hosts_results {
   display: flex;
   flex-direction: column;
-  height: 550px;
-  margin-top: 20px;
+  height: 580px;
+  margin-top: 20px auto auto 50px;
   background-color: #f2f2f2;
   width: 65%;
+  border-radius: 20px;
 }
 
 .hosts_results_title {
-  margin-left: 50px;
+  margin: 20px auto auto 50px;
 }
 
-.hosts_results_elements {
+.hosts_results_figures {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  height: 530px;
-  width: 900px;
-  margin: 15px auto 30px 50px;
+  margin: 15px auto 5px auto;
+  width: 90%;
+  padding-bottom: 10px;
+  height: 500px;
 }
 
-.hosts_results_element {
+figure {
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 2px 1px 5px 2px rgb(209, 209, 209);
+}
+.host_figure {
   width: 250px;
   height: 200px;
-  display: flex;
-  flex-direction: column;
-  border: 1px black solid;
+  padding: 4px;
+}
+
+.host_figure img {
+  width: 240px;
+  height: 120px;
+  border-radius: 20px 20px 0 0;
+  object-fit: cover;
 }
 
 .display_more {
-  margin: 15px auto 30px 50px;
+  margin: 10px auto 30px 50px;
 }
 
 .hosts_popular {
-  height: 550px;
-  margin-top: 20px;
+  height: 580px;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
-  width: 30%;
+  width: 25%;
   background-color: #f2f2f2;
 }
 
 .hosts_popular_title {
-  margin-left: 50px;
+  margin: 20px auto 5px 50px;
 }
 
-.hosts_popular_elements {
+.hosts_popular_figures {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 470px;
+  width: 95%;
+  margin: 15px auto;
+  align-items: center;
+}
+
+.host_popular_figure {
+  width: 300px;
+  height: 130px;
+  display: flex;
+  align-items: center;
+  padding: 5px;
+}
+
+.host_popular_figure img {
+  border-radius: 20px 0 0 20px;
+  object-fit: cover;
+  height: 120px;
+  width: 130px;
+}
+
+.activities {
+  margin: 50px auto 50px auto;
+  width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 500px;
 }
 
-.hosts_popular_element {
-  width: 250px;
-  height: 150px;
-  margin: auto;
-}
-
-.activities {
-  margin: 50px auto;
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 450px;
-}
-
 .activities_elements {
   display: flex;
   flex-direction: row;
-  height: 450px;
+  margin: 20px auto;
   width: 100%;
+  border: 1px green solid;
 }
 
 .activities_element {
+  flex: 1;
+  flex-direction: column;
+  height: 450px;
+  display: flex;
+  flex-direction: column;
+}
+
+.activities_figure {
   display: flex;
   flex-direction: column;
   border: 1px black solid;
-  width: 300px;
-  height: 400px;
+  flex: 1;
+  width: 320px;
+  border-radius: 20px;
+}
+
+.activities_figure img {
+  border-radius: 20px 20px 0 0;
+  object-fit: cover;
+  height: 200px;
 }
 
 footer {
-  width: 100%;
-  height: 120px;
+  width: 80%;
+  height: 150px;
+  margin: 50px auto 0 auto;
+  background-color: #f2f2f2;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
 .footer_elements {
@@ -216,4 +272,5 @@ footer {
 .footer_element {
   flex: 1;
   text-align: left;
+  line-height: 25px;
 }
