ajout de media queries pour tablettes

--- a/style.css
+++ b/style.css
@@ -73,13 +73,18 @@ h2 {
 
 h3 {
   font-size: 0.9em;
-  margin: auto;
-  text-align: left;
+  margin: auto 10px;
+}
+
+h4 {
+  font-size: 0.9em;
+  margin: auto auto 20px 0;
 }
 
 p {
-  margin: auto;
+  margin: auto 10px;
 }
+
 form {
   height: 50px;
   width: 400px;
@@ -101,7 +106,7 @@ form {
 
 .search_form_submit {
   color: white;
-  background-color: blue;
+  background-color: #0065fc;
   width: 140px;
   border-radius: 0 15px 15px 0;
   font-size: 1.1em;
@@ -110,17 +115,21 @@ form {
 .search_form_submit_responsive {
   width: 50px;
   border-radius: 0 15px 15px 0;
-  background-color: blue;
+  background-color: #0065fc;
   display: none;
 }
 
 /*filters*/
 .filters {
-  align-items: center;
   display: flex;
-  flex-direction: row;
+  flex-direction: wrap;
   justify-content: space-between;
   width: 800px;
+  align-items: center;
+}
+
+.filters a:hover {
+  border: 2px #0065fc solid;
 }
 
 .filters_item {
@@ -162,13 +171,12 @@ form {
 }
 
 .infos_icon i {
-  margin: 7px;
   color: #0065fc;
 }
 
 /*hostings*/
 .hostings {
-  margin: 30px auto;
+  margin: 30px auto 10px auto;
   width: 80%;
   display: flex;
   flex-direction: row;
@@ -180,11 +188,10 @@ form {
   display: flex;
   flex-direction: column;
   height: 580px;
-  margin-top: 20px auto auto 50px;
+  margin: 20px auto auto 0;
   background-color: #f2f2f2;
   width: 65%;
   border-radius: 20px;
-  padding-left: 50px;
 }
 
 .hostings_results_title {
@@ -193,6 +200,7 @@ form {
 
 .hostings_results_figures {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 15px auto;
@@ -207,11 +215,6 @@ figure {
   box-shadow: 2px 1px 5px 2px rgb(209, 209, 209);
 }
 
-figure:hover {
-  border: 5px #0065fc solid;
-  border-radius: 15px;
-}
-
 .hostings_results_figure {
   width: 250px;
   height: 200px;
@@ -219,6 +222,12 @@ figure:hover {
   justify-content: center;
   display: flex;
   flex-direction: column;
+}
+
+.hostings_results_figures a:hover,
+.hostings_popular_figures a:hover {
+  border: 3px #0065fc solid;
+  border-radius: 15px;
 }
 
 .hostings_results_figure img {
@@ -232,10 +241,13 @@ figure:hover {
 .hostings_figcaption {
   display: flex;
   flex-direction: column;
+  height: 100%;
+  text-align: left;
 }
 
 .stars {
   width: 150px;
+  margin: auto 10px;
 }
 
 .star_icon {
@@ -267,21 +279,21 @@ figure:hover {
   flex-direction: column;
   width: 25%;
   background-color: #f2f2f2;
+  margin-top: 20px;
 }
 
 .hostings_popular_head {
+  width: 300px;
   margin: 20px auto 5px 50px;
-  flex: 1;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  border: 1px black solid;
 }
 
 .hostings_popular_head i {
   float: right;
-  border: 1px black solid;
+  text-align: right;
 }
+
 .hostings_popular_figures {
   display: flex;
   flex-direction: column;
@@ -292,15 +304,15 @@ figure:hover {
   align-items: center;
 }
 
-.hosting_popular_figure {
+.hostings_popular_figure {
+  display: flex;
+  flex-direction: row;
   width: 300px;
   height: 130px;
-  display: flex;
-  align-items: center;
   padding: 5px;
 }
 
-.hosting_popular_figure img {
+.hostings_popular_figure img {
   border-radius: 20px 0 0 20px;
   object-fit: cover;
   height: 120px;
@@ -310,23 +322,18 @@ figure:hover {
 /*activities*/
 .activities {
   width: 80%;
-  margin: 50px auto 50px auto;
+  margin: 70px auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  text-align: left;
-  height: 400px;
+  height: 450px;
 }
 
 .activities_figures {
   display: flex;
-  flex-direction: row;
+  flex-direction: wrap;
   justify-content: space-between;
   width: 100%;
-  margin: 20px auto;
-}
-
-.activities_figures_cards {
 }
 
 .activities_figure,
@@ -336,10 +343,6 @@ figure:hover {
   height: 400px;
   text-align: left;
   justify-content: space-between;
-}
-
-.activities_figures a:hover,
-.activities_figures_cards a:hover {
 }
 
 .activities_figure img {
@@ -364,6 +367,9 @@ figure:hover {
   border-radius: 15px 15px 0 0;
 }
 
+.activities_title {
+  margin: auto 20px;
+}
 /*footer*/
 footer {
   width: 80%;
@@ -386,4 +392,107 @@ footer {
   flex: 1;
   text-align: left;
   line-height: 25px;
+}
+
+/* medium screens*/
+@media screen and (max-width: 768px) {
+  /*header*/
+  header {
+    width: 90%;
+  }
+
+  .search_section {
+    width: 90%;
+  }
+
+  /*filters*/
+  .filters {
+    width: 50%;
+  }
+
+  .filters a {
+    margin: 10px;
+  }
+
+  /*hostings*/
+  .hostings {
+    width: 100%;
+    height: 950px;
+    flex-direction: column;
+  }
+
+  .hostings_results {
+    width: 95%;
+    margin: auto;
+    padding-left: 0;
+  }
+
+  .hostings_results_figures {
+    width: 95%;
+    height: 470px;
+    margin: auto;
+  }
+
+  .hostings_results_figure {
+    width: 210px;
+    height: 200px;
+    padding: 4px;
+  }
+
+  .hostings_results_figure img,
+  .hostings_popular_figure img {
+    width: 200px;
+    border-radius: 15px 15px 0 0;
+  }
+
+  .hostings_popular {
+    width: 95%;
+    height: 320px;
+    flex-direction: column;
+    margin: auto;
+  }
+
+  .hostings_popular_figures {
+    flex-direction: row;
+    width: 95%;
+    margin: auto;
+    height: 230px;
+  }
+
+  .hostings_popular_figure {
+    flex-direction: column;
+    width: 210px;
+    height: 210px;
+    text-align: left;
+  }
+
+  /*activities*/
+  .activities {
+    width: 90%;
+  }
+
+  .activities_figure,
+  .activities_figures_cards {
+    width: 160px;
+    height: 300px;
+  }
+
+  .activities_figure img {
+    width: 150px;
+    height: 280px;
+  }
+
+  .activities_figures_card {
+    width: 160px;
+    height: 140px;
+  }
+
+  .activities_figures_card img {
+    width: 150px;
+    height: 160px;
+  }
+  /*footer*/
+  footer {
+    width: 90%;
+  }
 }
