--- a/style.css
+++ b/style.css
@@ -63,16 +63,15 @@ a {
 }
 
 h1 {
-  font-size: 1.3em;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 h2 {
-  font-size: 1.1em;
+  font-size: 1.3em;
 }
 
 h3 {
-  font-size: 0.9em;
+  font-size: 1.1em;
   margin: auto 10px;
 }
 
@@ -90,14 +89,20 @@ form {
   width: 400px;
   display: flex;
   flex-direction: row;
-  margin: 15px auto 15px 0;
+  margin: 30px auto 30px 0;
 }
 
 .search_form_icon {
   width: 50px;
   background-color: #f2f2f2;
-  padding: 15px 10px 0 20px;
   border-radius: 15px 0 0 15px;
+  display: flex;
+  align-items: center;
+}
+
+.search_form_icon i,
+.infos_icon i {
+  margin: auto;
 }
 
 .search_form_text {
@@ -119,22 +124,27 @@ form {
   display: none;
 }
 
+.search_form_submit_responsive i {
+  color: white;
+}
+
 /*filters*/
 .filters {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  width: 800px;
+  width: 70%;
   align-items: center;
 }
 
 .filters a:hover {
   border: 2px #0065fc solid;
+  border-radius: 90px;
 }
 
 .filters_item {
-  border: 1px black solid;
+  border: 1px #deebfe solid;
   border-radius: 90px;
   height: max-content;
   width: max-content;
@@ -143,7 +153,7 @@ form {
 }
 
 .filters_item_icon {
-  background-color: cornflowerblue;
+  background-color: #deebfe;
   border-radius: 90px;
   width: 40px;
   height: 40px;
@@ -167,7 +177,8 @@ form {
   align-items: center;
   border-radius: 90px;
   border: 1px #0065fc solid;
-  margin: 10px;
+  display: flex;
+  align-items: center;
 }
 
 .infos_icon i {
@@ -227,7 +238,7 @@ figure {
 
 .main_hostings_figures a:hover,
 .popular_hostings_figures a:hover {
-  border: 3px #0065fc solid;
+  border: 2px #0065fc solid;
   border-radius: 15px;
 }
 
@@ -312,7 +323,9 @@ figure {
 .popular_hostings_figcaption {
   height: 100%;
   align-items: center;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .popular_hostings_figure img {
@@ -335,6 +348,7 @@ figure {
 .activities_title {
   margin: auto 20px;
 }
+
 .activities_figures {
   display: flex;
   flex-direction: wrap;
@@ -400,7 +414,7 @@ footer {
 }
 
 /* medium screens*/
-@media screen and (max-width: 768px) {
+@media all and (min-width: 768px) and (max-width: 992px) {
   /*header*/
   header {
     width: 90%;
@@ -440,6 +454,14 @@ footer {
     padding: 4px;
   }
 
+  .main_hostings_figcaption {
+    text-align: center;
+  }
+
+  .stars {
+    margin: auto;
+  }
+
   .main_hostings_figure img,
   .popular_hostings_figure img {
     width: 200px;
@@ -467,6 +489,10 @@ footer {
     text-align: left;
   }
 
+  .popular_hostings_figcaption {
+    text-align: center;
+  }
+
   /*activities*/
   .activities {
     width: 95%;
@@ -476,6 +502,7 @@ footer {
 
   .activities_figures {
     width: 100%;
+    margin: 0 auto;
   }
 
   .activities_figure,
@@ -486,7 +513,7 @@ footer {
 
   .activities_figure img {
     width: 150px;
-    height: 260px;
+    height: 240px;
   }
 
   .activities_figures_card {
@@ -496,8 +523,9 @@ footer {
 
   .activities_figures_card img {
     width: 150px;
-    height: 110px;
+    height: 100px;
   }
+
   /*footer*/
   footer {
     width: 95%;
@@ -506,7 +534,18 @@ footer {
 
 /* small screens*/
 @media screen and (max-width: 576px) {
+  /*header*/
+  header {
+    height: 100px;
+    width: 90%;
+  }
+
   /*search*/
+  .search_section {
+    height: 600px;
+    width: 90%;
+  }
+
   form {
     width: 100%;
   }
@@ -519,22 +558,34 @@ footer {
     display: inline-block;
   }
 
+  /*filters*/
   .filters {
-    height: auto;
     flex-direction: column;
+    width: 75%;
+    height: 200px;
+  }
+
+  .filter {
   }
 
   /*hostings*/
   .hostings {
     flex-direction: column-reverse;
     width: 100%;
+    height: 2300px;
   }
 
   /*popular hostings*/
   .popular_hostings {
     flex-direction: column;
     width: 100%;
-    height: 600px;
+    height: 750px;
+    border-radius: 0;
+  }
+
+  .popular_hostings_head {
+    width: 90%;
+    margin: 30px auto 10px auto;
   }
 
   .popular_hostings_figures {
@@ -545,84 +596,108 @@ footer {
 
   .popular_hostings_figure {
     width: 90%;
-    height: 130px;
+    height: 150px;
     flex-direction: row;
-    margin: auto;
+    margin: 10px auto 0 auto;
+  }
+
+  .popular_hostings_figures a {
+    margin: 10px auto 0 auto;
   }
 
   .popular_hostings_figure img {
     width: 40%;
-  }
-
-  .popular_hostings_figcaption {
+    height: 140px;
   }
 
   /*main hostings*/
   .main_hostings {
     width: 100%;
-    height: 1500px;
+    height: 1600px;
+    background-color: white;
   }
 
   .main_hostings_figures {
     width: 100%;
     height: 1500px;
     flex-wrap: column;
+    margin: 15px auto;
   }
 
   .main_hostings_figures a {
     width: 90%;
-    margin: auto;
+    margin: 10px auto 0 auto;
   }
 
   .main_hostings_figure {
     width: 100%;
+    height: 210px;
+    text-align: center;
   }
 
   .main_hostings_figure img {
     width: 100%;
+    height: 130px;
   }
 
   /*activities*/
   .activities {
     width: 100%;
-    height: 1300px;
+    height: 1150px;
+    margin: auto;
   }
 
   .activities_figures {
     flex-direction: column;
-    height: 1300px;
+    width: 90%;
+    height: 1100px;
+    margin: 0 auto;
+  }
+
+  .activities_figures a {
+    margin: 5px auto 5px auto;
+    height: 160px;
   }
 
   .activities_figure {
     width: 100%;
-    height: 130px;
-    margin-top: 10px;
+    height: 160px;
+    margin: 10px auto 0 auto;
   }
 
   .activities_figures_cards {
     width: 100%;
-    height: 270px;
+    height: 350px;
+    margin: 10px auto 0 auto;
+  }
+
+  .activities_figures_cards a {
+    margin: 0 auto 5px auto;
   }
 
   .activities_figures_card {
-    width: 100%;
-    height: 130px;
-    margin-top: 10px;
+    height: 160px;
+    margin: 0 auto 0 auto;
   }
 
   .activities_figure img,
   .activities_figures_card img {
-    width: 90%;
+    width: 100%;
     height: 130px;
   }
 
   /*footer*/
-  .footer {
-    height: auto;
-    margin: auto;
+  footer {
+    height: 400px;
+    margin: 50px auto 0 auto;
+    flex-direction: column;
+    width: 100%;
   }
 
   .footer_items {
     flex-direction: column;
+    height: 350px;
+    margin: auto;
+    width: 80%;
   }
 }
